Fix breadcrumb-item extra spacing #337

--- a/src/_breadcrumbs.scss
+++ b/src/_breadcrumbs.scss
@@ -22,7 +22,7 @@
       &::before {
         color: $gray-color-light;
         content: "/";
-        padding-right: $unit-1;
+        padding-right: $unit-2;
       }
     }
   }
